UNOMI-203: improve integration test to use KarafTestSupport